maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:3: error: Missing closing brace `}' assumed here
def isWallAtLeft () : Boolean = {
^PledgeMaze:3: error: expected class or object definition
def isWallAtLeft () : Boolean = {
^PledgeMaze:11: error: expected class or object definition
def isDirectionFree (direction : Direction) : Boolean = {
^PledgeMaze:20: error: expected class or object definition
def leftFollowerMode(sommeAngle : Int) : Int = {
^PledgeMaze:40: error: expected class or object definition
def northRunnerMode (sommeAngle: Int) {
^PledgeMaze:49: error: expected class or object definition
def makeMoving() {
^